Fix overflow in shrunken notes in firefox.
Firefox doesn't actually implement CSS3's box model. Note's were
overflowing instead of clipping when shrunken.

--- a/src/css/notes.css
+++ b/src/css/notes.css
@@ -21,11 +21,20 @@
 }
 
 #notes.shrink .note .contents {
-    white-space: nowrap;
+  height: 1.2em;
+  line-height: 1.8em;
+  margin-top: -0.3em;
+}
+
+#notes.shrink .note .contents >*{
+  display: none;
+}
+#notes.shrink .note .contents >*:first-child {
+  display: inherit;
 }
 
 #notes.shrink .note .contents * {
-  max-height: 12px;
+  max-height: 16px;
 }
 
 .note.pinned {
